[package]
name = "cosmic_garbage"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["wayland", "tokio"]
